--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_platform_widgets: ^2.0.0
+  flutter_platform_widgets: ^7.0.1
   iconify_flutter: ^0.0.5
   get: ^4.6.5
-  http: ^0.13.5
-  dio: ^4.0.6
-  google_fonts: ^3.0.1
-  glass_kit: ^2.0.1
+  http: ^1.2.2
+  dio: ^5.7.0
+  google_fonts: ^6.2.1
+  glass_kit: ^4.0.1
   hexcolor: ^3.0.1
   gallery_view:
     git:
       url: https://github.com/webrror/image_gallery.git
+  provider: ^6.1.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
